<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvDiaDefault"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbLunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunes" />

        <RadioButton
            android:id="@+id/rbMartes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMartes" />

        <RadioButton
            android:id="@+id/rbMiercoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMiercoles" />

        <RadioButton
            android:id="@+id/rbJueves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbJueves"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbViernes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbViernes" />

        <RadioButton
            android:id="@+id/rbSabado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbSabado" />

        <RadioButton
            android:id="@+id/rbDomingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDomingo" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>